src/objects/depotMap4Hour__c.object
<CustomObject>
    <description>This object stores mappings of countries / postal codes / 4-hour depots.</description>
    <fields>
        <fullName>depotMap4HourCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>depotMap4HourDriveTime__c</fullName>
        <label>Drive Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>depotMap4HourKey__c</fullName>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>depotMap4HourMiles__c</fullName>
        <label>Miles</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>depotMap4HourPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>depotMap4Hour_4HourDepot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>4-Hour Depot</label>
        <referenceTo>depot__c</referenceTo>
        <relationshipLabel>Depot Maps: 4-Hour Depots</relationshipLabel>
        <relationshipName>depotMap4Hour_4HourDepot</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Depot Map: 4-Hour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>depotMap4HourCountry__c</columns>
        <columns>depotMap4HourPostalCode__c</columns>
        <columns>depotMap4Hour_4HourDepot__c</columns>
        <columns>depotMap4HourMiles__c</columns>
        <columns>depotMap4HourDriveTime__c</columns>
        <columns>depotMap4HourKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Depot Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depot Maps: 4-Hour</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>